@@ -2,19 +2,65 @@
 
 ## 问题
 * Java虚拟机的结构？https://www.cnblogs.com/zwbg/p/6194470.html
-* ClassLoader加载机制，双亲委托加载
+* ClassLoader加载机制，双亲委托加载？
 
 
+## Java内存模型
+* 所有变量都存储在主内存中，每条线程有自己的工作内存
+* 保证原子性，可见性，有序性
 
-## JVM内存区域/逻辑内存模型
-1. 程序计数器/PC寄存器：线程私有。如果指向的是本地方法，存放的是undefined。不会导致OOO。
-5. 方法区：线程共享。存放类加载子系统加载的类信息，同时包括运行时常量池。垃圾回收的次要对象。-XX:PermSize, -XX:MaxPermSize，运行时常量池溢出
-2. Java栈：线程私有。为方法服务，存放方法参数，局部变量等信息。栈深度溢出SOE，栈的动态扩展OOO, -Xss。
-4. 本地方法栈：线程私有。为本地方法服务
-3. Java堆：线程共享。垃圾回收的主要对象。堆的动态扩展，-Xms, -Xmx, 内存溢出，内存泄露
-6. 直接内存/堆外内存：库函数可直接分配堆外内存，也会导致OOO
+* 变量从主内存到工作内存，执行read+load操作
+* 变量从工作内存到主内存，执行store+write操作
+* assign: 从执行引擎传递给工作内存，use: 从工作内存传递给执行引擎
+* 主内存变量是否线程独占：lock与unlock
+
+### 内存屏障指令
+* LoadLoad, StoreStore, LoadStore, StoreLoad
+
+### volatile
+* 保证共享变量对所有线程可见：写操作会强制刷新主内存，并且使其他线程的缓存无效
+* 禁止指令重排优化
+
+
+## JVM内存区域
+* 程序计数器/PC寄存器：线程私有。如果指向的是本地方法，存放的是undefined。不会导致OOO。
+* Java栈：线程私有。为方法服务，存放方法参数，局部变量等信息。栈深度溢出SOE，栈的动态扩展OOO, -Xss。
+* 本地方法栈：线程私有。为本地方法服务
+* Java堆：线程共享。垃圾回收的主要对象。堆的动态扩展，-Xms, -Xmx, 内存溢出，内存泄露
+* 直接内存/堆外内存：库函数可直接分配堆外内存，也会导致OOO
+* 方法区：线程共享。存放类加载子系统加载的类信息，同时包括运行时常量池。垃圾回收的次要对象。-XX:PermSize, -XX:MaxPermSize，运行时常量池溢出
+
+### 运行时常量池
+* 存放字面量，符号引用量
+* 不仅包括编译时生成的常量，也包括运行时生成的常量
+
 
 ## 垃圾回收
+
+### 根搜索算法
+GC root对象作为起点，搜索所有走过的路径（引用链），不可达的对象可以被回收。
+GC root: Java栈的变量，本地方法栈的变量，方法区的静态变量，方法区的常量
+
+### 分代收集算法
+年轻代用复制算法，年老代用标记-清除算法
+
+### 复制算法
+年轻代按照8:1:1分成3块，整理Eden区的时候，把存活对象复制到Survivor区，然后清除Eden区。
+
+### Serial GC/Parallel GC 标记-清理-压缩
+* 标记：标记年老代的存活对象
+* 清理：从头检查，只留下存活对象
+* 压缩：从头开始，顺序填满
+* JDK默认是P GC
+
+### CMS GC 并发标记-清除算法
+* 初始化标记，只查找距离类加载器最近的幸存对象，停机时间很短
+* 并行标记，查找幸存对象的引用，此时其他线程仍在运行
+* 重新标记，再次确认在并行标记阶段标记的幸存对象，停机时间很短
+* 并行清除，清除对象，此时其他线程仍在运行
+
+### G1 GC
+
 
 ### 年轻代
 * Eden, From, To
@@ -31,15 +77,35 @@
 ### 持久代
 * 大小-XX:MaxPermSize
 
-### 分代收集算法
-年代代用复制算法，年老代用标记-清除算法
 
-### 复制算法
-年轻代按照8:1:1分成3块，整理Eden区的时候，把存活对象复制到Survivor区，然后清除Eden区。
+## 类加载
 
-### 根搜索算法
-GC root对象作为起点，搜索所有走过代路径（引用链），不可达的对象可以被回收。
-GC root: Java栈的变量，本地方法栈的变量，方法区的静态变量，方法区的常量
+### 类加载器
+* Bootstrap ClassLoader: 核心类库，-Xbootclasspath，-Dsun.boot.class.path
+* Extension ClassLoader: 扩展类，-Djava.ext.dirs
+* Application ClassLoader: 应用类，-Djava.class.path
+
+### 类加载器父类
+* 自定义类加载器的父类是AppClassLoader
+* AppClassLoader的父类是ExtClassLoader
+* ExtClassLoader没有父类
+
+### 双亲委托
+* 委托父类加载器加载
+* 为了解决类加载过程中的安全性问题，比如加载自己的java.lang.Object
+* findLoadedClass() 检查该类是否已经加载过
+* parent.loadClass() 委托父类加载
+* findBootstrapClassOrNull() 委托Bootstrap ClassLoader加载
+* findClass() 自己加载
+
+### autowired
+* 使@Lazy标签无效
+
+
+
+
+
+
 
 
 
